[project]
name = "meowify-api"
version = "0.1.0"
description = "API and local script for inference with Meowify"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "soundfile>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.0",
    "meowifylib @ git+https://github.com/BenBJD/meowifylib.git"
]
